@@ -5,6 +5,7 @@ Kiwix 0.9.1
 * FIXED: Wrong tab printed (#820)
 * FIXED: Select text by focusing the searchbox, instead of deleting it (#842)
 * FIXED: Better highlighting colors in the library
+* FIXED: Beautiry bookmark XML file (#942)
 * NEW: New supported user interface languages: Amharic (am), Aramaic (arc) and
 Somali (so)
 * NEW: Minimal skin
